test/library/standard/Random/stonea/permutationAssociative.good
$CHPL_HOME/modules/standard/Random.chpl:213: In function 'permutation':
$CHPL_HOME/modules/standard/Random.chpl:221: error: permutation does not support non-rectangular arrays
  permutationAssociative.chpl:5: called as permutation(arr: [DefaultAssociativeDom(int(64),true)] real(64), seed: int(64), param algorithm = 1: RNG)
