test/library/standard/Random/stonea/permutationAssociative.chpl
use Random;
{
    var assocDom = {1,2,3};
    var arr: [assocDom] real;
    permutation(arr);
}
